--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+psycopg2-binary==2.9.10
 python-dotenv==1.1.0
 PyYAML==6.0.2
 redis==5.2.1
